[package]
name = "axum_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls"
] }

argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"

tower-http = { version = "0.5", features = ["cors"] }

jsonwebtoken = "9"
